# telegram_gui

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
config/: default.toml
crates/cache/: Cargo.toml
crates/cache/src/: blob.rs  lib.rs  secrets.rs
crates/database/: Cargo.toml
crates/database/migrations/: 0001_init.sql  0002_avatars.sql
crates/database/src/: accounts.rs  chats.rs  lib.rs  messages.rs  users.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  event.rs  lib.rs  model.rs  secrets.rs
crates/telegram-api/: Cargo.toml
crates/telegram-api/src/: auth.rs  client.rs  lib.rs  mapping.rs  ops.rs  session.rs  updates.rs
crates/telegram-core/: Cargo.toml
crates/telegram-core/src/: accounts.rs  bus.rs  lib.rs  services.rs  sync.rs
crates/ui/: Cargo.toml  tauri.conf.json
crates/ui/capabilities/: default.json
crates/ui/src/: bridge.rs  commands.rs  main.rs
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: Avatar.tsx  ChatList.tsx  Composer.tsx  LoginView.tsx  MediaBlock.tsx  MessageView.tsx
