[package]
name = "shared"
description = "Domain model, events and configuration shared by every crate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }

[lints.clippy]
unwrap_used = "deny"
