[package]
name = "telegram-api"
description = "MTProto boundary: wraps grammers and maps wire types to the domain model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["qr-login"]
## QR-code login via raw auth.exportLoginToken TL calls.
qr-login = []

[dependencies]
shared = { workspace = true }
grammers-client = { workspace = true }
grammers-session = { workspace = true }
grammers-tl-types = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }

[lints.clippy]
unwrap_used = "deny"
